# trackable_ptr

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp  trackable_ptr.h  trackable_ptr2.cpp  trackable_ptr2.h  trackable_ptr_extensions.h  unique_trackable.cpp  unique_trackable.h  vector_interaction.cpp
benchmark/: CMakeLists.txt  main.cpp  pointers.cpp  self-reference.cpp
example/: CMakeLists.txt  main.cpp  vector_interaction.cpp
include/tower120/: trackable.h  trackable_base.h  trackable_ptr.h  trackable_ptr_extensions.h
include/tower120/v2/: trackable.h  trackable_base.h  trackable_ptr.h
test/: CMakeLists.txt  CTAD.cpp  constness.cpp  test1.cpp  test_struct.h  test_utils.h  trackable.cpp  trackable_base.cpp  trackable_ptr_extensions.cpp  unique_trackable.cpp
test/constness_failure/: assign_trackable.cpp  assign_trackable_base.cpp  ctr_trackable.cpp  ctr_trackable_base.cpp
test/v2/: constness.cpp  trackable.cpp  trackable_base.cpp  unique_trackable.cpp
test/v2/constness_failure/: assign_trackable.cpp  assign_trackable_base.cpp  ctr_trackable.cpp  ctr_trackable_base.cpp
